[package]
name = "seismo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["derive"] }
hotwatch = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.7"
anyhow = "1.0"
