[package]
name = "seismo"
version = "0.1.0"
edition = "2021"
authors = ["Einliterflasche <einliterflasche@pm.me>"]
license = "MIT OR Apache-2.0"
description = "A light script for automatically building your Tectonic projects"
repository = "https://github.com/einliterflasche/seismo"
tags = ["script", "latex", "tectonic"]

[dependencies]
clap = { version = "4.1", features = ["derive"] }
hotwatch = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.7"
anyhow = "1.0"

